Added display of opening posts and chat rooms of logged-in users

--- a/index.html
+++ b/index.html
@@ -30,15 +30,25 @@
             </form>
             <button type="button" onclick="handleLogout()">로그아웃</button>
         </div>
+        
         <div class="container mt-3 p-5">
-            <h2>django-chat</h2>
+            <h2>Product</h2>
             <div class="row">
-                <div class="col-12 col-md-8">
-                    <button type="button" id="roomConnect" class="btn btn-success">Connect</button>
+                <div class="col-12 col-md-8" id="product">
+
+                </div>
+            </div>
+        </div>
+        <div class="container mt-3 p-5">
+            <h2>로그인 유저 채팅방</h2>
+            <div class="row">
+                <div class="col-12 col-md-8" id="chatroom">
+
                 </div>
             </div>
         </div>
         <script src="user.js"> </script>
         <script src='index.js'></script>
+        
     </body>
 </html>
