--- a/room.html
+++ b/room.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
         </div>
+        <button class="btn btn-success" id="roomDelete" type="button" onclick="roomDelete()">Delete</button>
         <script> 
             let name = localStorage.getItem("roomName");
             let test = document.getElementById('roomName').textContent = name
